# gabriel

./: .bandit  .commit-lint-fix  .dockerignore  .editorconfig  .eslintignore  .eslintrc.json  .flake8  .gitignore  .pre-commit-config.yaml  .pymarkdown-ignore  .pymarkdown.json  .secrets.baseline  .typos.toml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  commitlint.config.cjs  jest.config.js  llms.txt  lychee.toml  mkdocs.yml  package-lock.json  package.json  prompts-repos.md  pyproject.toml  requirements.txt  runbook.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  coverage.yml  docker.yml  docs.yml  mkdocs-pages.yml  release-drafter.yml  security.yml  spellcheck.yml
config/prompts/: system.attestation.json  system.md  system.pub
config/semgrep/: rules.yaml
dict/: allow.txt
docker/: Dockerfile
docs/: CONTRIBUTING.md  FAQ.md  FLYWHEEL_RISK_MODEL.md  IMPROVEMENT_CHECKLISTS.md  ROADMAP.md  SECURITY_GAPS.md  THREAT_MODEL.md  TOKEN_PLACE_IMPROVEMENTS.md  index.md  prompts-codex.md
docs/api/: index.md
docs/gabriel/: FAQ.md  FLYWHEEL_RISK_MODEL.md  IMPLEMENT.md  IMPROVEMENTS.md  OFFLINE.md  ROADMAP.md  SECRET_BOUNDARY.md  SECRET_STORAGE.md  SWORD_OF_DAMOCLES.md  THREAT_MODEL.md  VIEWER.md
docs/prompts/codex/: README.md  baseline-automation.md  generate-improvement-checklists.md  implement.md  (+11 more)
docs/security/: llm_agent_threat_model.md  llm_data_leakage.md  llm_egress_allowlisting.md
docs/sphinx/: analysis.rst  conf.py  index.rst  knowledge.rst  secrets.rst
gabriel/: __about__.py  __init__.py  arithmetic.py  inference.py  knowledge.py  notes.py  phishing.py  policy.py  prompt_lint.py  recommendations.py  secrets.py  security.py  selfhosted.py  text.py  tokenplace.py  utils.py  viewer.py
gabriel/analysis/: __init__.py  network.py  recommendations.py  selfhosted.py
gabriel/common/: __init__.py  docker.py  interfaces.py  scratch.py  secret_store.py  secrets.py  vector_store.py
gabriel/config/: command_allowlist.yaml
gabriel/ingestion/: __init__.py  git.py  text.py
gabriel/notify/: __init__.py  tokenplace.py
gabriel/prompts/: __init__.py  system.py
gabriel/security/: __init__.py  audit.py  command_allowlist.py  container_scanning.py  entropy.py  fetch_proxy.py  provenance.py
gabriel/ui/: __init__.py  cli.py  viewer.py
gabriel/viewer_assets/: viewer.js
outages/: 2025-08-20-docs-spellcheck.json  2025-09-27-codeql-permissions.json  2025-11-04-docker-pip-vuln.json  2025-11-04-docker-tag-format.json  2025-11-04-flake8-d401.json  2025-11-04-github-pages.json  2025-11-04-spellcheck-jsonl.json  README.md
prompts/: README.md  generate-improvements.md  refresh-related-projects.md  scan-bright-dark-patterns.md  update-risk-model.md
scripts/: build_sphinx_docs.py  commitlint_allowlist.txt  run_commitlint.py  run_commitlint.sh  run_lychee.py  run_trufflehog_precommit.py  setup.sh  validate_policy.py
tests/: test_about.py  test_arithmetic.py  test_cli.py  test_cli_infer.py  test_cli_network.py  test_command_allowlist.py  test_commitlint.py  test_common.py  test_common_docker.py  test_common_module.py  test_container_scanning.py  test_dependabot.py  test_dependabot_config.py  test_docker_workflow.py  test_dockerignore.py  test_docs.py  test_docs_build.py  test_entropy_scanner.py  test_fetch_proxy.py  test_git_crawl.py  test_inference.py  test_ingestion_text.py  test_knowledge.py  test_markdown_config.py  test_markdown_lint.py  test_network_analysis.py  test_notes.py  test_phishing.py  test_policy_validator.py  test_pr_template.py  test_prompt_lint.py  test_provenance.py  test_recommendations.py  test_scratch.py  test_secrets.py  test_security.py  test_security_audit.py  test_security_workflow.py  test_selfhosted.py  test_setup_script.py  (+12 more)
tests/security/: test_egress_control.py
viewer/: index.html  viewer.js
viewer/__tests__/: viewer.test.js
(+31 files in other folders)
