[project]
name = "gabriel"
version = "0.0.0"
requires-python = ">=3.10"

[project.scripts]
gabriel = "gabriel.utils:main"
gabriel-calc = "gabriel.utils:main"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = ["E203", "E501"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider --cov=gabriel --cov-report=xml --cov-report=term --cov-fail-under=100"
testpaths = ["tests"]

[tool.coverage.run]
source = ["gabriel"]
branch = true

[tool.coverage.xml]
output = "coverage.xml"
